BUG Clarify dates of release

--- a/paper.tex
+++ b/paper.tex
@@ -77,13 +77,14 @@ itself is a mix of high-level Python and low-level \cpp{}. This achieves a good
 balance between speed and ease of implementation.
 
 Version 1.0 of mahotas has been released recently and this is now a mature,
-well-tested package (the first version was made available over 4~years ago).
-\footnote{Note for reviewers: the version currently available (0.9.6)
-implements all functionality described in this manuscript. I will release it as
-version 1.0 when this manuscript is accepted to coincide with publication.
-Naturally, any bugs that are found and reported in the meanwhile will be
-addressed.} Mahotas runs and is used on different versions of Unix (including
-Linux, SunOS, and FreeBSD), Mac OS X, and Windows.
+well-tested package (the first versions were made available over 4~years ago,
+although the package was not named mahotas then). \footnote{Note for reviewers:
+the version currently available (0.9.6) implements all functionality described
+in this manuscript. I will release it as version 1.0 when this manuscript is
+accepted to coincide with publication. Naturally, any bugs that are found and
+reported in the meanwhile will be addressed.} Mahotas runs and is used on
+different versions of Unix (including Linux, SunOS, and FreeBSD), Mac OS X, and
+Windows.
 
 \section{Implementation and Architecture}
 
@@ -437,7 +438,8 @@ of Bremen).
 \textit{Name}: Github\\
 \textit{Identifier}: https://github.com/luispedro/mahotas\\
 \textit{Licence}: MIT\\
-\textit{Date published}: Since 2010
+\textit{Date published}: Since 2010. Some of the code had been previously made
+available under other names.
 
 \section{Reuse Potential}
 
